--- a/lib/hyacinth_web/templates/layout/root.html.heex
+++ b/lib/hyacinth_web/templates/layout/root.html.heex
@@ -10,7 +10,7 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <header>
+    <header class="mb-32">
       <section class="container">
         <nav>
           <ul>
@@ -22,7 +22,7 @@
           <%= render "_user_menu.html", assigns %>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
+          <img class="max-w-md" src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
         </a>
       </section>
     </header>
