--- a/lib/hyacinth_web/templates/layout/_user_menu.html.heex
+++ b/lib/hyacinth_web/templates/layout/_user_menu.html.heex
@@ -1,4 +1,4 @@
-<ul>
+<ul class="flex items-center space-x-4">
 <%= if @current_user do %>
   <li><%= @current_user.email %></li>
   <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
