--- a/lib/hyacinth_web/templates/user_session/new.html.heex
+++ b/lib/hyacinth_web/templates/user_session/new.html.heex
@@ -1,27 +1,40 @@
-<h1>Log in</h1>
+<header>
+  <h1 class="text-2xl font-medium">Log in</h1>
+</header>
 
-<.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
-  <%= if @error_message do %>
-    <div class="alert alert-danger">
-      <p><%= @error_message %></p>
+<main class="mt-2">
+  <.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
+    <%= if @error_message do %>
+      <div class="alert alert-danger">
+        <p><%= @error_message %></p>
+      </div>
+    <% end %>
+
+    <div class="form-content">
+      <p>
+        <%= label f, :email %>
+        <%= text_input f, :email, placeholder: "Email address" %>
+      </p>
+
+      <p>
+        <%= label f, :password %>
+        <%= password_input f, :password, placeholder: "Password" %>
+      </p>
+
+      <div>
+        <%= checkbox f, :remember_me, class: "mr-1" %>
+        <%= label f, :remember_me, "Keep me logged in for 60 days" %>
+      </div>
+
+      <div>
+        <%= submit "Log in" %>
+      </div>
     </div>
-  <% end %>
+  </.form>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
-
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
-
-  <div>
-    <%= submit "Log in" %>
+  <div class="mt-4 space-x-1">
+    <%= link "Register", to: Routes.user_registration_path(@conn, :new) %>
+    <span>|</span>
+    <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
   </div>
-</.form>
-
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+</main>
