--- a/lib/hyacinth_web/templates/user_settings/edit.html.heex
+++ b/lib/hyacinth_web/templates/user_settings/edit.html.heex
@@ -1,53 +1,75 @@
-<h1>Settings</h1>
+<header>
+  <h1 class="text-2xl font-medium">Settings</h1>
+</header>
 
-<h3>Change email</h3>
+<main class="mt-4 space-y-12">
+  <div>
+    <h3 class="text-lg font-medium mb-2">Change email</h3>
 
-<.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
-  <%= if @email_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
+    <.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
+      <%= if @email_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
 
-  <%= hidden_input f, :action, name: "action", value: "update_email" %>
+      <%= hidden_input f, :action, name: "action", value: "update_email" %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
+      <div class="form-content">
+        <p>
+          <%= label f, :email %>
+          <%= text_input f, :email, placeholder: "New email address" %>
+          <%= error_tag f, :email %>
+        </p>
 
-  <%= label f, :current_password, for: "current_password_for_email" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
-  <%= error_tag f, :current_password %>
+        <p>
+          <%= label f, :current_password, for: "current_password_for_email" %>
+          <%= password_input f, :current_password, placeholder: "Password", name: "current_password", id: "current_password_for_email" %>
+          <%= error_tag f, :current_password %>
+        </p>
+
+        <div>
+          <%= submit "Change email" %>
+        </div>
+      </div>
+    </.form>
+  </div>
 
   <div>
-    <%= submit "Change email" %>
+    <h3 class="text-lg font-medium mb-2">Change password</h3>
+
+    <.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
+      <%= if @password_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
+
+      <%= hidden_input f, :action, name: "action", value: "update_password" %>
+
+      <div class="form-content">
+        <p>
+          <%= label f, :password, "New password" %>
+          <%= password_input f, :password, placeholder: "New password" %>
+          <%= error_tag f, :password %>
+        </p>
+
+        <p>
+          <%= label f, :password_confirmation, "Confirm new password" %>
+          <%= password_input f, :password_confirmation, placeholder: "New password" %>
+          <%= error_tag f, :password_confirmation %>
+        </p>
+
+        <p>
+          <%= label f, :current_password, for: "current_password_for_password" %>
+          <%= password_input f, :current_password, placeholder: "Password", name: "current_password", id: "current_password_for_password" %>
+          <%= error_tag f, :current_password %>
+        </p>
+
+        <div>
+          <%= submit "Change password" %>
+        </div>
+      </div>
+    </.form>
   </div>
-</.form>
-
-<h3>Change password</h3>
-
-<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
-  <%= if @password_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= hidden_input f, :action, name: "action", value: "update_password" %>
-
-  <%= label f, :password, "New password" %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
-
-  <%= label f, :password_confirmation, "Confirm new password" %>
-  <%= password_input f, :password_confirmation, required: true %>
-  <%= error_tag f, :password_confirmation %>
-
-  <%= label f, :current_password, for: "current_password_for_password" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password" %>
-  <%= error_tag f, :current_password %>
-
-  <div>
-    <%= submit "Change password" %>
-  </div>
-</.form>
+</main>
