--- a/lib/hyacinth_web/templates/label_job/form.html.heex
+++ b/lib/hyacinth_web/templates/label_job/form.html.heex
@@ -5,15 +5,21 @@
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
+  <div class="form-content">
+    <p>
+      <%= label f, :name %>
+      <%= text_input f, :name, placeholder: "Job name" %>
+      <%= error_tag f, :name %>
+    </p>
 
-  <%= label f, :label_type %>
-  <%= select f, :label_type, Ecto.Enum.values(Hyacinth.Labeling.LabelJob, :label_type), prompt: "Choose a value" %>
-  <%= error_tag f, :label_type %>
+    <p>
+      <%= label f, :label_type %>
+      <%= select f, :label_type, Ecto.Enum.values(Hyacinth.Labeling.LabelJob, :label_type), prompt: "Choose a value" %>
+      <%= error_tag f, :label_type %>
+    </p>
 
-  <div>
-    <%= submit "Save" %>
+    <div>
+      <%= submit "Save" %>
+    </div>
   </div>
 </.form>
