--- a/lib/hyacinth_web/templates/label_job/new.html.heex
+++ b/lib/hyacinth_web/templates/label_job/new.html.heex
@@ -2,4 +2,6 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.label_job_path(@conn, :create)) %>
 
-<span><%= link "Back", to: Routes.label_job_path(@conn, :index) %></span>
+<div class="mt-4">
+  <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
+</div>
