Allow choice of dataset for labeling job

--- a/lib/hyacinth_web/templates/label_job/index.html.heex
+++ b/lib/hyacinth_web/templates/label_job/index.html.heex
@@ -8,6 +8,7 @@
     <tr>
       <th>Name</th>
       <th>Label type</th>
+      <th>Dataset</th>
 
       <th></th>
     </tr>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= label_job.name %></td>
         <td><%= label_job.label_type %></td>
+        <td><%= label_job.dataset_id %></td>
 
         <td class="text-xs space-x-2">
           <span><%= link "Label", to: Routes.label_path(@conn, :index, label_job.id, 0) %></span>
