--- a/lib/hyacinth_web/templates/label_job/edit.html.heex
+++ b/lib/hyacinth_web/templates/label_job/edit.html.heex
@@ -1,7 +1,29 @@
-<h1>Edit Label job</h1>
+<header>
+  <h1>Edit Label job</h1>
+</header>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.label_job_path(@conn, :update, @label_job)) %>
+<main>
+  <.form let={f} for={@changeset} action={Routes.label_job_path(@conn, :update, @label_job)}>
+    <%= if @changeset.action do %>
+      <div class="alert alert-danger">
+        <p>Oops, something went wrong! Please check the errors below.</p>
+      </div>
+    <% end %>
 
-<div class="mt-4">
-  <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
-</div>
+    <div class="form-content">
+      <p>
+        <%= label f, :name %>
+        <%= text_input f, :name, placeholder: "Job name" %>
+        <%= error_tag f, :name %>
+      </p>
+
+      <div>
+        <%= submit "Save Changes" %>
+      </div>
+    </div>
+  </.form>
+
+  <div class="mt-4">
+    <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
+  </div>
+</main>
