--- a/lib/hyacinth_web/templates/label_job/new.html.heex
+++ b/lib/hyacinth_web/templates/label_job/new.html.heex
@@ -1,7 +1,41 @@
-<h1>New Label job</h1>
+<header>
+  <h1>New Label job</h1>
+</header>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.label_job_path(@conn, :create)) %>
+<main>
+  <.form let={f} for={@changeset} action={Routes.label_job_path(@conn, :create)}>
+    <%= if @changeset.action do %>
+      <div class="alert alert-danger">
+        <p>Oops, something went wrong! Please check the errors below.</p>
+      </div>
+    <% end %>
 
-<div class="mt-4">
-  <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
-</div>
+    <div class="form-content">
+      <p>
+        <%= label f, :name %>
+        <%= text_input f, :name, placeholder: "Job name" %>
+        <%= error_tag f, :name %>
+      </p>
+
+      <p>
+        <%= label f, :label_type %>
+        <%= select f, :label_type, Ecto.Enum.values(Hyacinth.Labeling.LabelJob, :label_type), prompt: "Choose a value" %>
+        <%= error_tag f, :label_type %>
+      </p>
+
+      <p>
+        <%= label f, :dataset_id %>
+        <%= select f, :dataset_id, Enum.map(@datasets, fn d -> {d.name, d.id} end), prompt: "Choose a value" %>
+        <%= error_tag f, :dataset_id %>
+      </p>
+
+      <div>
+        <%= submit "Create Job" %>
+      </div>
+    </div>
+  </.form>
+
+  <div class="mt-4">
+    <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
+  </div>
+</main>
