Clean up label interface and correctly set user for label

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,15 +9,19 @@ h1 {
     @apply text-2xl text-gray-300 font-medium;
 }
 
-a {
+a:not(.link-btn) {
     @apply text-blue-200 hover:text-blue-300 hover:underline font-medium;
 }
 
 
 /* Buttons */
 
-.btn {
+.btn, .link-btn {
     @apply px-3 py-1.5 rounded focus:ring-2 ring-offset-2 ring-offset-gray-900 transition;
+}
+
+.btn-lg {
+    @apply px-4 py-2;
 }
 
 .btn-blue {
