--- a/lib/hyacinth_web/templates/label/index.html.heex
+++ b/lib/hyacinth_web/templates/label/index.html.heex
@@ -1,7 +1,7 @@
 <header>
   <h1>
-    <span class="text-gray-400">Element:</span>
-    <%= Path.basename(@element.path) %>
+    <span class="text-gray-400">Object:</span>
+    <%= Path.basename(@object.path) %>
   </h1>
   <h2 class="text-gray-400">
     <span>Job:</span>
@@ -11,11 +11,11 @@
 
 <main class="mt-8">
   <div class="flex items-center space-x-12">
-    <img class="w-1/2" src={Routes.image_path(@conn, :show, @element.id)} />
+    <img class="w-1/2" src={Routes.image_path(@conn, :show, @object.id)} />
 
     <div class="flex flex-col space-y-2">
       <%= for label_val <- ["some label", "another", "label xyz"] do %>
-        <%= link label_val, class: "link-btn btn-lg btn-blue", to: Routes.label_path(@conn, :set_label, @job.id, @element.id, label_val), method: :post %>
+        <%= link label_val, class: "link-btn btn-lg btn-blue", to: Routes.label_path(@conn, :set_label, @job.id, @object.id, label_val), method: :post %>
       <% end %>
     </div>
 
@@ -39,7 +39,7 @@
   </div>
 
   <div class="mt-4">
-    <a class="" href={Routes.label_path(@conn, :index, @job.id, @element_index - 1)}>Prev</a>
-    <a class="" href={Routes.label_path(@conn, :index, @job.id, @element_index + 1)}>Next</a>
+    <a class="" href={Routes.label_path(@conn, :index, @job.id, @object_index - 1)}>Prev</a>
+    <a class="" href={Routes.label_path(@conn, :index, @job.id, @object_index + 1)}>Next</a>
   </div>
 </main>
