--- a/lib/hyacinth_web/templates/label_job/index.html.heex
+++ b/lib/hyacinth_web/templates/label_job/index.html.heex
@@ -8,6 +8,7 @@
     <tr>
       <th>Name</th>
       <th>Label type</th>
+      <th>Label options</th>
       <th>Dataset</th>
       <th>Created By User</th>
 
@@ -19,6 +20,7 @@
       <tr>
         <td><%= label_job.name %></td>
         <td><%= label_job.label_type %></td>
+        <td>[<%= Enum.join(label_job.label_options, ", ") %>]</td>
         <td><%= label_job.dataset_id %></td>
         <td><%= label_job.created_by_user_id %></td>
 
