--- a/lib/hyacinth_web/templates/layout/root.html.heex
+++ b/lib/hyacinth_web/templates/layout/root.html.heex
@@ -20,7 +20,7 @@
         </div>
       </div>
     </nav>
-    <div class="mt-6 mx-auto max-w-screen-lg">
+    <div class="mt-6 pb-32 mx-auto max-w-screen-lg">
       <%= @inner_content %>
     </div>
   </body>
