--- a/lib/hyacinth_web/templates/label_session/label.html.heex
+++ b/lib/hyacinth_web/templates/label_session/label.html.heex
@@ -4,11 +4,13 @@
 </header>
 
 <main class="mt-8">
-  <div class="flex items-start space-x-12">
-    <div class="w-1/2 flex">
+  <div class="flex justify-center items-start space-x-12">
+    <div class="flex space-x-6">
       <%= for object <- @element.objects do %>
-        <div class="flex-1">
-          <img class="w-full" src={Routes.image_path(@conn, :show, object.id)} />
+        <div>
+          <div class="aspect-square flex justify-center items-center" style="height: calc(100vh - 16rem);">
+            <img class="w-full" src={Routes.image_path(@conn, :show, object.id)} />
+          </div>
           <div class="mt-2 p-2 text-lg text-gray-300 font-medium text-center bg-gray-800 rounded border border-gray-700">
             <span><%= Path.basename(object.path) %></span>
             <span>(<%= object.id %>)</span>
