--- a/lib/hyacinth_web/templates/layout/app_wide.html.heex
+++ b/lib/hyacinth_web/templates/layout/app_wide.html.heex
@@ -1,4 +1,4 @@
-<div class="mt-6 pb-32 mx-auto max-w-screen-lg">
+<div class="mx-4">
   <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
   <%= @inner_content %>
