--- a/lib/hyacinth_web/templates/label_job/index.html.heex
+++ b/lib/hyacinth_web/templates/label_job/index.html.heex
@@ -3,7 +3,7 @@
   <%= link "[New Job]", to: Routes.label_job_path(@conn, :new) %>
 </header>
 
-<table class="table mt-2">
+<table class="table w-full mt-2">
   <thead>
     <tr>
       <th>Name</th>
@@ -24,8 +24,8 @@
         <td><%= label_job.dataset_id %></td>
         <td><%= label_job.created_by_user_id %></td>
 
-        <td class="text-xs space-x-2">
-          <span><%= link "Label", to: Routes.label_session_path(@conn, :new, label_job.id) %></span>
+        <td class="text-xs text-center space-x-2">
+          <span><%= link "New Session", to: Routes.label_session_path(@conn, :new, label_job.id) %></span>
           <span><%= link "Show", to: Routes.label_job_path(@conn, :show, label_job) %></span>
           <span><%= link "Edit", to: Routes.label_job_path(@conn, :edit, label_job) %></span>
           <span><%= link "Delete", to: Routes.label_job_path(@conn, :delete, label_job), method: :delete, data: [confirm: "Are you sure?"] %></span>
