--- a/lib/hyacinth_web/templates/label_session/show.html.heex
+++ b/lib/hyacinth_web/templates/label_session/show.html.heex
@@ -15,7 +15,7 @@
     </li>
     <%= if @label_session.blueprint do %>
       <li class="mt-2">
-        <span class="text-sm text-gray-400 font-medium">This is a Blueprint Session</span>
+        <span class="text-sm text-gray-400 font-medium">This is a Blueprint Session. It cannot be labeled.</span>
       </li>
     <% else %>
       <li>
