--- a/lib/hyacinth_web/templates/label_session/label.html.heex
+++ b/lib/hyacinth_web/templates/label_session/label.html.heex
@@ -22,7 +22,7 @@
             <img class="w-full rounded" src={Routes.image_path(@conn, :show, object.id)} />
           </div>
           <div class="mt-2 p-2 text-lg text-gray-300 font-medium text-center bg-gray-800 rounded border border-gray-700">
-            <span><%= Path.basename(object.path) %></span>
+            <span><%= object.rel_path %></span>
           </div>
         </div>
       <% end %>
