--- a/lib/hyacinth_web/templates/layout/live.html.heex
+++ b/lib/hyacinth_web/templates/layout/live.html.heex
@@ -1,4 +1,4 @@
-<main class="container">
+<div>
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
@@ -8,4 +8,4 @@
     phx-value-key="error"><%= live_flash(@flash, :error) %></p>
 
   <%= @inner_content %>
-</main>
+</div>
